--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,17 @@
     --color-primary:#4db5ff;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color--white:#fff;
-    --color-light: rgba (255, 255, 255, 0.6)
+    --color-light: rgba (255, 255, 255, 0.6);
+
+    --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --container-width-ms: 90%;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
