--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,600&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -27,4 +29,11 @@ html {
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background: var(--color--bg);
+    color: var(--color-white);
+    line-height: 1.7;
 }
