--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 
     --container-width-lg: 75%;
     --container-width-md: 86%;
-    --container-width-ms: 90%;
+    --container-width-ms: 90%; 
 }
 
 html {
@@ -32,9 +32,9 @@ html {
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background: var(--color--bg);
-    color: var(--color-white);
+    font-family: "Poppins", sans-serif;
+    background: var(--color-bg);
+    color: var(--color--white);
     line-height: 1.7;
     /* background-image: url(...); */
 }
