--- a/src/index.css
+++ b/src/index.css
@@ -103,5 +103,10 @@ a:hover {
     background-color: var(--color--white);
     color: var(--color-bg);
     border-color: transparent;
-    
+
+}
+
+.btn-primary {
+    background: var(--color-primary);
+    color: var(--color-bg);
 }
