--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,14 @@ img {
     width: 100%;
     object-fit: cover;
 }
+
+/* =========== MEDIA QUERIES (MEDIUM DEVICES) ================= */
+
+@media screen and (max-width: 1024) {
+    
+    .container {
+        width: var(--container-width-sm);
+    }
+
+    
+}
